# nsb

./: .gitignore  METHODOLOGICAL_ALIGNMENT_PLAN.md  README.md  pyproject.toml
data/: outbreaktrees_founder_counts.csv  outbreaktrees_sars_mers_counts.csv  taube_2020_transmission_trees.rds
experiments/: count_parameters.py  exp_approximation.py  exp_complexity.py  exp_criticality.py  exp_dynamics.py  exp_extreme.py  exp_hidden_size.py  exp_moment_analysis.py  exp_outbreaktrees.py  exp_spectral.py  exp_synthetic.py  exp_task_how_next.py  exp_task_who.py  exp_training_dynamics.py  extract_founder_counts.r  plot_outbreaktrees.py  plot_synthetic.py  plot_utils.py  process_outbreaktrees.r  summarize_outbreaktrees.r  utils.py  visualize_outbreaktrees.r
nsb/: attention_model.py  constrained_model.py  gru_model.py  lstm_model.py  model.py  negative_binomial.py  poisson.py  softmax_nn.py  spectral_engine.py  task_how.py  task_who.py
nsb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/: ablation_study_table.tex  criticality_results.csv  hidden_size_sensitivity.csv  outbreak_data_summary.csv  outbreak_data_summary.tex  real_world_benchmark_table.tex  real_world_results.csv  sample_complexity_results.csv  spectral_radius_results.csv  synthetic_approximation_results.csv  synthetic_approximation_results_table.tex  synthetic_dynamics.csv  synthetic_dynamics.tex  training_dynamics.csv
tests/: test_attention_model.py  test_constrained_model.py  test_gru_model.py  test_lstm_model.py  test_model.py  test_negative_binomial.py  test_poisson.py  test_softmax_nn.py  (+3 more)
(+28 files in other folders)
